<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_FileRingBuffer_Status" Id="{a40cb0b0-0a58-4a7a-a565-dc6cd9995cd1}">
    <Declaration><![CDATA[TYPE ST_FileRingBuffer_Status :
STRUCT
	AlarmHistory_FileFull:ARRAY[0..GVL.NovRamBufferRatio-1] OF ARRAY [0..GVL.FileRingBufferRatio-1] OF BOOL;//9
	
	//FileRingBufferLocked:ARRAY[0..GVL.FileRingBufferTotalNum-1]OF BOOL;
	nowFileIndex:ARRAY [0..gvl.FileRingBufferRatio-1] OF UDINT;//3
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>